# bitcask

./: 1.json  Cargo.toml  keys.txt
src/: main.rs
src/core/: keyfile.rs  mod.rs  serdes.rs
