[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
thiserror =  { version =  "1.0.40"}
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"